--- a/core/css/variables.scss
+++ b/core/css/variables.scss
@@ -3,7 +3,7 @@ $color-main-background: #ffffff;
 $color-primary: #0082c9;
 $color-primary-text: #ffffff;
 $color-error: #e9322d;
-$color-warning: #ffcc44;
+$color-warning: #eca700;
 $color-success: #46ba61;
 $color-primary-element: $color-primary;
 
