--- a/settings/css/settings.scss
+++ b/settings/css/settings.scss
@@ -976,6 +976,10 @@ span.version {
 		&.apps-experimental {
 			flex-basis: 90%;
 		}
+		h2.app-name {
+			display: block;
+			margin: 8px 0;
+		}
 	}
 	.app-description {
 		p {
@@ -1014,6 +1018,7 @@ span.version {
 			position: absolute;
 			padding-left: 6px;
 			padding-top: 15px;
+
 			.enable {
 				position: relative;
 				top: -1px;
