Remove border from personal settings
Signed-off-by: Julius Härtl <jus@bitgrid.net>

--- a/settings/css/settings.scss
+++ b/settings/css/settings.scss
@@ -156,6 +156,11 @@ input {
 		width: 100%;
 	}
 }
+#personal-settings {
+	.section {
+		border: 0;
+	}
+}
 
 .personal-settings-container {
 	display: inline-block;
